# SkyPi

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
game/: CMakeLists.txt
game/assets/: CREDITS.txt  asset.json  data.json  load_asset.json  save_asset.json  terrain.shader  test.json  test.wren
game/include/: game.hpp  terrain.hpp
game/include/editor/: game_editor.hpp  terrain_editor.hpp
game/settings/: editors.json  imgui.ini
game/src/: game.cpp  main.cpp  terrain.cpp
game/src/editor/: game_editor.cpp  terrain_editor.cpp  terrain_view.cpp
include/: game.hpp  pga3d.hpp  terrain.hpp
include/editor/: editor.hpp  game_editor.hpp  terrain_view.hpp
include/engine/: application.hpp  enum.hpp  file.hpp  graphics.hpp  hash.hpp  log.hpp  math.hpp  memory.hpp  string.hpp  type_traits.hpp  window.hpp
include/framework/: camera.hpp  image.hpp
src/: game.cpp  runtime.cpp  terrain.cpp
src/editor/: editor.cpp  game_editor.cpp  terrain_view.cpp
src/engine/: application.cpp  graphics.cpp  log.cpp  math.cpp
src/engine/glfw/: window_glfw.cpp
src/engine/opengl/: gl_common.hpp  graphics_opengl.cpp  graphics_opengles.cpp
